# LITD

./: CMakeLists.txt  Linux_GCC_Make.sh  README.md  Win32_Make.sh
.cache/clangd/index/: glfw3.h.E6932FD86B321DCE.idx  main.c.D03DC6F4D60B43BB.idx
LITDGame/: CMakeLists.txt  main.c
